# examples

./: .gitignore  CMakeLists.txt  README.md
inter_write/: CMakeLists.txt
inter_write/include/: inter_write.h
read_write/: CMakeLists.txt
read_write/src/: read_write.h  receiver.cpp  sender.cpp
word_count/: CMakeLists.txt  README.md  main.cpp  test.h  test_count.cpp  word_count.cpp  word_count.h
